# ticketland-ai

./: Cargo.toml  LICENSE
src/: lib.rs
src/image_recognition/: aws_rekognition.rs  mod.rs
