[package]
name = "ticketland-ai"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-types = "0.51.0"
aws-sdk-rekognition = "0.21.0"
aws-smithy-types = "0.51.0"
eyre = "0.6.8"
